<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <!-- 뒤로가기 버튼 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backBtnGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backBtnGuideTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.017"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backBtnGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0687"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backBtnGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <ImageButton
        android:id="@+id/goBackButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/backtracking_button_image"
        app:layout_constraintStart_toStartOf="@id/backBtnGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/backBtnGuideRight"
        app:layout_constraintTop_toTopOf="@id/backBtnGuideTop"
        app:layout_constraintBottom_toBottomOf="@id/backBtnGuideBottom"/>
    <!-- 텍스트 인풋 공용 라인 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/textSharingGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.056"/>
    <!-- 가장 큰 텍스트 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTitleTextGuideTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTitleTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginTitleTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.58"/>

    <TextView
        android:id="@+id/TitleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login_bigTiltle"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/loginTitleTextGuideRight"
        app:layout_constraintTop_toTopOf="@id/loginTitleTextGuideTop"
        app:layout_constraintBottom_toBottomOf="@id/loginTitleTextGuideBottom"
        android:fontFamily="@font/pretendard_extrabold"
        android:textSize="32.64sp"
        android:textColor="@color/black"/>
    <!-- 좀 작은 텍스트 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginSubTitleTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/loginSubTitleTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.433"/>

    <TextView
        android:id="@+id/loginSubTiltleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login_smallTiltle"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/loginSubTitleTextGuideRight"
        app:layout_constraintBottom_toBottomOf="@id/loginSubTitleTextGuideBottom"
        app:layout_constraintTop_toTopOf="@id/loginTitleTextGuideBottom"
        android:fontFamily="@font/pretendard_semibold"
        android:textSize="15.36sp"
        android:textColor="@color/hint_black1"/>
    <!-- 이메일 인풋 위 텍스트 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emailSubTextGuideTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emailSubTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.352"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emailSubTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.323"/>

    <TextView
        android:id="@+id/subText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/email_too_input"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/emailSubTextGuideRight"
        app:layout_constraintTop_toTopOf="@id/emailSubTextGuideTop"
        app:layout_constraintBottom_toBottomOf="@id/emailSubTextGuideBottom"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_medium"/>

    <!-- 인풋 이메일 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emailInputBoxGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.425"/>

    <EditText
        android:id="@+id/emailInputBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/ex_email"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/inputBoxSharingGuideRight"
        app:layout_constraintTop_toTopOf="@id/emailSubTextGuideBottom"
        app:layout_constraintBottom_toBottomOf="@id/emailInputBoxGuideBottom"
        android:textColorHint="@color/hint_black1"
        android:inputType="textEmailAddress"/>
    <!-- 인풋창 공용 가이드 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/inputBoxSharingGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.947"/>
    <!-- 비밀번호 위 인풋 텍스트 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/passwordSubTextGuideTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/passwordSubTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.458"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/passwordSubTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.341"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/smallText_pass"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/passwordSubTextGuideRight"
        app:layout_constraintTop_toTopOf="@id/passwordSubTextGuideTop"
        app:layout_constraintBottom_toBottomOf="@id/passwordSubTextGuideBottom"
        android:textSize="12sp"
        android:fontFamily="@font/pretendard_medium"
        android:textColor="@color/hint_black2"/>
    <!-- 비밀번호 입력란 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/passwordInputBoxGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53"/>

    <EditText
        android:id="@+id/passwordInputBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/input_pass"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/inputBoxSharingGuideRight"
        app:layout_constraintTop_toTopOf="@id/passwordSubTextGuideBottom"
        app:layout_constraintBottom_toBottomOf="@id/passwordInputBoxGuideBottom"
        android:textColorHint="@color/hint_black1"
        android:inputType="textPassword"/>
    <!-- 유일한 버튼 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nextStepBtnGuideTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.889"/>

    <Button
        android:id="@+id/nextStepBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/hint_black1"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/login_go"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/nextStepBtnGuideTop"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>