<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.fragment.RealNameFragment"
    >

    <!--뒤로가기 버튼-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backBtnGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backBtnGuideTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.017"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backBtnGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0687"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backBtnGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>
    <!-- 텍스트 공용 라인 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/textSharingGuideLeft"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.045"/>
    <!-- 텍스트 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameTitleTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameTitleTextGuideTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.092"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameTitleTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.156"/>
    <!-- 그 밑에 좀 작은 텍스트 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameSubTitleTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.187"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameSubTitleTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.38" />
    <!-- 인풋 위의 조금 작은 텍스트 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameSubTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.32"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameSubTextGuideTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.44"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameSubTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.468"/>
    <!-- 인풋 창 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameInputBoxGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.944"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nameInputBoxGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />
    <!-- 다음 단계로 버튼 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/nextStepBtnGuideTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.896"/>
    <!-- 학번 입력 위 작은 텍스트 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/studentIdSubTextGuideTop"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/studentIdSubTextGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.36"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/studentIdSubTextGuideRight"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.362"/>
    <!-- 학번 입력 창 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/studentIdInputBoxGuideBottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.413"/>
        

    <ImageButton
        android:id="@+id/backBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/backBtnGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/backBtnGuideRight"
        app:layout_constraintTop_toTopOf="@id/backBtnGuideTop"
        app:layout_constraintBottom_toBottomOf="@id/backBtnGuideBottom"
        android:background="@drawable/backtracking_button_image"/>
    <TextView
        android:id="@+id/nameTitleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintTop_toTopOf="@id/nameTitleTextGuideTop"
        app:layout_constraintBottom_toBottomOf="@id/nameTitleTextGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/nameTitleTextGuideRight"
        android:text="@string/welcome_sin_up"
        android:fontFamily="@font/pretendard_extrabold"
        android:textSize="32.64sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/nameSubTitleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/nameSubTitleTextGuideRight"
        app:layout_constraintTop_toTopOf="@id/nameTitleTextGuideBottom"
        app:layout_constraintBottom_toBottomOf="@id/nameSubTitleTextGuideBottom"
        android:text="@string/welcome_Hi"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/hint_black1"
        android:textSize="15.36sp"/>
    <TextView
        android:id="@+id/nameSubText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/nameSubTextGuideRight"
        app:layout_constraintTop_toTopOf="@id/nameSubTextGuideTop"
        app:layout_constraintBottom_toBottomOf="@id/nameSubTextGuideBottom"
        android:text="@string/what_is_name"
        android:fontFamily="@font/pretendard_medium"
        android:textSize="11sp"
        android:textColor="@color/hint_black2"/>

    <EditText
        android:id="@+id/nameInputBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@drawable/focus_point"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintEnd_toEndOf="@id/nameInputBoxGuideRight"
        app:layout_constraintTop_toTopOf="@id/nameSubTextGuideBottom"
        app:layout_constraintBottom_toBottomOf="@id/nameInputBoxGuideBottom"
        android:hint="@string/name_edit"
        android:textColorHint="@color/hint_black1"
        android:fontFamily="@font/pretendard_medium"
        android:textSize="16sp"
        android:inputType="textPersonName"
        />
    <Button
        android:id="@+id/nextStepBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/nextStepBtnGuideTop"
        android:background="@color/hint_black1"
        android:text="@string/next_stage"
        android:textSize="23sp"
        android:fontFamily="@font/pretendard_semibold"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintTop_toTopOf="@id/studentIdSubTextGuideTop"
        app:layout_constraintBottom_toBottomOf="@id/studentIdSubTextGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/studentIdSubTextGuideRight"
        android:text="@string/what_your_id"
        android:textSize="11sp"
        android:textColor="@color/hint_black2"
        android:fontFamily="@font/pretendard_medium"/>
    <EditText
        android:id="@+id/studentIdInputBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/textSharingGuideLeft"
        app:layout_constraintTop_toTopOf="@id/studentIdSubTextGuideBottom"
        app:layout_constraintBottom_toBottomOf="@id/studentIdInputBoxGuideBottom"
        app:layout_constraintEnd_toEndOf="@id/nameInputBoxGuideRight"
        android:hint="@string/id_input"
        android:textSize="16sp"
        android:fontFamily="@font/pretendard_medium"
        android:textColorHint="@color/hint_black1"/>








</androidx.constraintlayout.widget.ConstraintLayout>